[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamn-marl"
version = "0.1.0"
description = "Multi-Agent Mobile Network + MEC environment (Gymnasium MultiAgentEnv) with PPO training via Ray RLlib."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Your Name"}]
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.28",
  "matplotlib>=3.7",
  "ray[rllib]>=2.8",
  "torch>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
